app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hash-dep
namespace: my-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hash
  template:
    metadata:
      labels:
        app: hash
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
              claimName: hash-claim
      containers:
        - name: hashgenerator
          image: salamy1/dwk-hashgenerator
          volumeMounts: 
            - name: shared-file
              mountPath: /usr/src/app/files
        - name: hashreader
          image: salamy1/dwk-hashreader
          volumeMounts: 
            - name: shared-file
              mountPath: /usr/src/app/files
