app/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hashgenerator-ingress
  namespace: my-apps
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hashgenerator-svc
          servicePort: 2345
